cmake_minimum_required(VERSION 3.16)
project(mpl)


list(PREPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(JPEG REQUIRED)
find_package(PNG REQUIRED)

file(GLOB Hh_SRC_FILES libHh/*.cpp)
add_library(Hh ${Hh_SRC_FILES})
target_include_directories(Hh PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(Hh PUBLIC ${JPEG_INCLUDE_DIR})
target_link_libraries(Hh ${JPEG_LIBRARIES} ${PNG_LIBRARIES})

function(add_executable_folder name )
  file(GLOB ${name}_SRC_FILES ${name}/*.cpp)
  add_executable(${name} ${${name}_SRC_FILES})
  target_include_directories(${name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(${name} Hh)
endfunction()

add_executable_folder(FilterPM)
add_executable_folder(Filtera3d)
add_executable_folder(Filterframe)
add_executable_folder(Filterimage)
add_executable_folder(Filtermesh)
add_executable_folder(Filterprog)
#add_executable_folder(Filtervideo)
#add_executable_folder(G3dOGL)
#add_executable_folder(G3dVec)
add_executable_folder(MeshDistance)
add_executable_folder(MeshReorder)
add_executable_folder(MeshSimplify)
add_executable_folder(Meshfit)
add_executable_folder(MinCycles)
add_executable_folder(Polyfit)
add_executable_folder(Recon)
add_executable_folder(StitchPM)
add_executable_folder(Subdivfit)
#add_executable_folder(VideoViewer)
